[package]
name = "spmspm_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[dependencies]
heck = "0.4.1"
proc-macro2 = "1.0.56"
quote = "1.0.26"
serde = { version = "1.0.163", features = ["derive"] }
syn = {version = "2.0.15",features = ["full"]}
toml = "0.7.3"
